--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
 - name: nexus
   memory: 1024M
   host: nexus
-  path : ./nexus-2.12.0-01.war
-  buildpack: java_buildpack_offline	
+  buildpack: java_buildpack_offline
+  path : build/nexus-2.12.0-01.war
