--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,4 @@ applications:
 - name: nexus
   memory: 1024M
   host: nexus
-  buildpack: java_buildpack_offline
-  path : build/nexus-2.12.0-01.war
+  path : nexus-2.12.0-01.war
