--- a/manifest.yml
+++ b/manifest.yml
@@ -3,4 +3,5 @@ applications:
 - name: nexus
   memory: 1024M
   host: nexus
+  buildpack: https://github.com/cloudfoundry/java-buildpack.git
   path : nexus-2.12.0-01.war
